Added a 10 min log for mainly posture, gracefulness, and body language logging

--- a/src/app/log-options/log-options.component.html
+++ b/src/app/log-options/log-options.component.html
@@ -1,4 +1,5 @@
 <h3 class="text-center">LOGGING</h3>
+<app-ten-colm-btn [btnText]="'10 Min Log'" [linkPath]="'10min'"></app-ten-colm-btn>
 <app-ten-colm-btn [btnText]="'30 Min Log'" [linkPath]="'30min'"></app-ten-colm-btn>
 <app-ten-colm-btn [btnText]="'Location Change Log'" [linkPath]="'locationChange'"></app-ten-colm-btn>
 <app-ten-colm-btn [btnText]="'Nightly Log'" [linkPath]="'nightly'"></app-ten-colm-btn>
